# Inspire_hands

./: Inspire_hands_scripts_explanation.ps  Inspire_hands_scripts_explanation.txt
C++/test/: control_485.cpp  control_can.cpp
C++/三、四代手通用控制程序/: control_485.cpp  control_can.cpp
C/control_485_C/: 1.txt  CMakeLists.txt  hand_api.c  hand_api.h  test.cpp
python/main_test_scripts/: demo_485.py  demo_can.py  demo_modbus.py  demo_modbus_multi-device.py  touch_data.py  touch_data_ts.py
python/test_1/: demo_485.py  demo_can.py
python/test_2/: demo_485.py  touch_data_ts.py
python/四代手控制程序/: demo_485.py  demo_can.py  demo_modbus.py  demo_modbus_multi-device.py  touch_data.py  touch_data_ts.py
